elk enabled